--- a/payment-integration/package.json
+++ b/payment-integration/package.json
@@ -27,9 +27,12 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "react-draggable-slider": "^0.1.6",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-react-icons": "^0.2.0"
   }
 }
